--- a/INFOGR2021tmpl8_P2/Template.csproj
+++ b/INFOGR2021tmpl8_P2/Template.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="quad.cs" />
     <Compile Include="rendertarget.cs" />
+    <Compile Include="SceneGraph.cs" />
     <Compile Include="shader.cs" />
     <Compile Include="surface.cs" />
     <Compile Include="template.cs" />
@@ -60,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="assets\floor.obj" />
+    <None Include="assets\teapot.obj" />
     <None Include="shaders\fs.glsl" />
     <None Include="shaders\fs_post.glsl" />
     <None Include="shaders\vs.glsl" />
@@ -69,6 +72,11 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="assets\font.png" />
+    <Content Include="assets\ground.jpg" />
+    <Content Include="assets\wood.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
