--- a/INFOGR2021tmpl8_P2/Template.csproj
+++ b/INFOGR2021tmpl8_P2/Template.csproj
@@ -61,6 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="assets\AL05m.obj" />
+    <None Include="assets\cube.obj" />
+    <None Include="assets\cumulus00.obj" />
     <None Include="assets\floor.obj" />
     <None Include="assets\teapot.obj" />
     <None Include="shaders\fs.glsl" />
@@ -74,8 +77,10 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\cloud.jpg" />
     <Content Include="assets\font.png" />
     <Content Include="assets\ground.jpg" />
+    <Content Include="assets\purple.jpg" />
     <Content Include="assets\wood.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
